tests/snapshots/examples_fixtures/aoc__2025__aoc_day6_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day6_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:55:35
   |
55 |         split(trim(line), " ") |> filter(/x -> x != "")
   |                                   ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:59:18
   |
59 |         lines |> map(/line -> split_words_line(line))
   |                  ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:77:70
   |
77 |                 Some(v) -> collect_token_col(rows, col, row_idx + 1, push(acc, v)),
   |                                                                      ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:88:56
   |
88 |             transpose_token_rows(rows, col + 1, width, push(acc, col_tokens))
   |                                                        ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:96:51
   |
96 |             parse_tokens_to_ints(tokens, idx + 1, push(acc, parse_int(str_at(tokens, idx))))
   |                                                   ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:109:19
    |
109 |         let rev = reverse(tokens)
    |                   ^^^^^^^

Hint:
  Define it first: let reverse = ...;

Help:
  Did you mean `rev`?


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:111:41
    |
111 |         let nums = parse_tokens_to_ints(slice(rev, 1, len(rev)), 0, [||])
    |                                         ^^^^^

Hint:
  Define it first: let slice = ...;


error[E001]: Duplicate Name

Duplicate binding: `rows` is already defined.

  examples/aoc/2025/aoc_day6_haskell_style.flx:119:9
    |
119 |         let rows = parse_words_lines(lines)
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day6_haskell_style.flx:0:1
  |


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:122:17
    |
122 |         cols |> fold(0, /(acc, col) -> acc + eval_day06a_col(col))
    |                 ^^^^

Hint:
  Define it first: let fold = ...;

Help:
  Did you mean one of: `col`, `cols`?


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:147:52
    |
147 |             transpose_lines(lines, col + 1, width, push(acc, col_str))
    |                                                    ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:168:17
    |
168 |                 push(acc, current)
    |                 ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:214:46
    |
214 |             read_compact_ints(cols, idx + 1, push(acc, read_compact_int(str_at(cols, idx))))
    |                                              ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:225:47
    |
225 |             let rest_nums = read_compact_ints(slice(group_cols, 1, len(group_cols)), 0, [||])
    |                                               ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:226:24
    |
226 |             let nums = concat([|first_num|], rest_nums)
    |                        ^^^^^^

Hint:
  Define it first: let concat = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day6_haskell_style.flx:238:19
    |
238 |         groups |> fold(0, /(acc, g) -> acc + eval_day06b_group(g))
    |                   ^^^^

Hint:
  Define it first: let fold = ...;

Help:
  Did you mean one of: `col`, `cols`?

Found 15 errors.
== stdout ==
<not executed>
